old/xray-demo/image-server/enabled/image-server-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: image-server
  namespace: xray-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        name: image-server
    spec:
      containers:
        - name: image-server
          image: image-server:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
                cpu: 500m
                memory: 100M
            requests:
              cpu: 200m
              memory: 50M
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - image-server
        from:
          kind: ImageStreamTag
          name: image-server:latest
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - bucket-helper
        from:
          kind: ImageStreamTag
          name: bucket-helper:latest
    - type: ConfigChange
